MATH-894 Reflect type change in "hashCode".
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/math/trunk@1410660 13f79535-47bb-0310-9956-ffa450edef68